--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   </ul>
   <br/>
   <ul>
+	<li>2013-04-23
+	  <a href="posts/how_to_install_gnu_icecat_on_debian_wheezy.html">How
+	  to Install GNU Icecat on Debian Wheezy</a>
+	</li>
 	<li>2013-04-09 
 	  <a href="posts/libreplanet_2013.html">LibrePlanet 2013</a>
 	</li>
