New Post: 'Google Glass Seems Awesome, But...' http://zachwick.com/google_glass_seems_awesome_but.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   </ul>
   <br/>
   <ul>
+	<li>2013-05-02
+	  <a href="posts/google_glass_seems_awesome_but.html">Google Glass
+	  Seems Awesome, But...</a>
+	</li>
 	<li>2013-04-23
 	  <a href="posts/how_to_install_gnu_icecat_on_debian_wheezy.html">How
 	  to Install GNU Icecat on Debian Wheezy</a>
