Fixes some non-validating HTML

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 </head>
 <body>
   <h2>ZachWick's Development Playground</h2>
-  <ul>
+  <div>
 	<span><a href="./index.html">Home</a></span>
 	<span><a href="pages/about.html">About</a></span>
-  </ul>
+  </div>
   <br/>
   <ul>
 	<li>2013-05-02
