--- a/index.html
+++ b/index.html
@@ -1,5 +1,37 @@
 <head>
   <title>ZachWick's Development Playground</title>
+  <style>
+	body {
+	  max-width: 800px;
+  	  margin: 50px auto;
+  	  font-family: sans-serif;
+  	  line-height: 1.5;
+	}
+	a {
+ 	  text-decoration: none; 
+	}
+	a:hover {
+ 	  text-decoration: underline; 
+	}
+	body > h2 {
+	  text-align: center;
+	}
+	body > div {
+	  margin: 0;
+  	  text-align: center;
+	}
+	body > ul > li {
+  	  display: block;
+  	  margin: 0;
+  	  list-style-type: none;
+  	  text-align: left;
+  	  font-weight: bold;
+	}
+	body > ul > li a {
+  	  margin-left: 10px;
+  	  font-weight: normal;
+	}
+  </style>
 </head>
 <body>
   <h2>ZachWick's Development Playground</h2>
