Updated a title to the correct string.

--- a/pages/about.html
+++ b/pages/about.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   <h2>About ZachWick</h2>
-  <h3>Last Updated: 2013-04-23</h3>
+  <h3>Last Updated: 2013-06-30</h3>
   <div>
 	<span><a href="../index.html">Home</a></span>
 	<span><a href="../pages/about.html">About</a></span>
@@ -59,7 +59,7 @@
 	<ul>
 	  <li> Barracuda Networks
 		<ul>
-		  <li>Web Developer on Copy.com</li>
+		  <li>Software Engineer</li>
 		  <li>2012-05 - Present</li>
 		</ul>
 	  </li>
