Added debrief on PyOhio 2013
Signed-off-by: Zach Wick <zach@zachwick.com>

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
   </div>
   <br/>
   <ul>
+	<li>2013-08-05
+	  <a href="posts/pyohio_2013.html">PyOhio 2013</a>
+	</li>
 	<li>2013-05-02
 	  <a href="posts/google_glass_seems_awesome_but.html">Google Glass
 	  Seems Awesome, But...</a>
