Adds google site verification

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+  <meta name="google-site-verification" content="HcjfH34vMstP99AFsMBlgx54FxUGKq1LmICBg33b-mk" />
   <title>ZachWick's Development Playground</title>
   <style>
 	body {
