--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
   </div>
   <br/>
   <ul>
+	<li>2013-08-09
+	  <a href="posts/my_dream_workplace_culture.html">My Dream
+	  Workplace Culture</a>
+	</li>
 	<li>2013-08-05
 	  <a href="posts/pyohio_2013.html">PyOhio 2013</a>
 	</li>
