New Post: Development is Art
Also updated some missing links to my key file.

Signed-off-by: Zach Wick <zach@zachwick.xxx>

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
   </div>
   <br/>
   <ul>
+	<li>2013-08-29
+	  <a href="posts/development_is_art.html">Development is Art</a>
+	</li>
 	<li>2013-08-09
 	  <a href="posts/my_dream_workplace_culture.html">My Dream
 	  Workplace Culture</a>
