--- a/pages/about.html
+++ b/pages/about.html
@@ -39,7 +39,7 @@
   <div>
 	<span><a href="../index.html">Home</a></span>
 	<span><a href="../pages/about.html">About</a></span>
-	<span><a href="pages/zachwick_key.asc">Key</a></span>
+	<span><a href="../pages/zachwick_key.asc">Key</a></span>
   </div>
   <p>
 	A Developer and avid outdoorsman. Also a technophile who is prone to bouts
