New Post: Emoji support in Jabber.el
Signed-off-by: Zach Wick <zach@zachwick.xxx>

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
   </div>
   <br/>
   <ul>
+	<li>2013-10-21
+	  <a href="posts/emoji_support_in_emacs_jabber.html">Emoji
+	  Support in Jabber.el</a>
 	<li>2013-08-29
 	  <a href="posts/development_is_art.html">Development is Art</a>
 	</li>
