--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
   </div>
   <br/>
   <ul>
+	<li>2013-10-23
+	  <a href="posts/moving_on_to_new_projects.html">Moving On to New
+	  Projects</a>
 	<li>2013-10-21
 	  <a href="posts/emoji_support_in_emacs_jabber.html">Emoji
 	  Support in Jabber.el</a>
