Adds new 'Project Ideas' page.
Signed-off-by: Zach Wick <zach@zachwick.xxx>

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <div>
 	<span><a href="./index.html">Home</a></span>
 	<span><a href="pages/about.html">About</a></span>
+	<span><a href="pages/project_list.html">Project Ideas</a></span>
 	<span><a href="pages/zachwick_key.asc">Key</a></span>
   </div>
   <br/>
