--- a/pages/project_list.html
+++ b/pages/project_list.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Just Picked a Whole Bouquet of Oopsie Daisies</title>
+  <title>Project Ideas</title>
   <style>
 	body {
 	  max-width: 800px;
@@ -34,8 +34,8 @@
   </style>
 </head>
 <body>
-  <h2>Just Picked a Whole Bouquet of Oopsie Daisies</h2>
-  <h3>2012-06-19</h3>
+  <h2>About ZachWick</h2>
+  <h3>Last Updated: 2013-06-30</h3>
   <div>
 	<span><a href="../index.html">Home</a></span>
 	<span><a href="../pages/about.html">About</a></span>
@@ -43,8 +43,19 @@
 	<span><a href="../pages/zachwick_key.asc">Key</a></span>
   </div>
   <p>
-	As you can see, zachwick.com is experiencing some technical difficulties right now. In the process of trying to clean up my Linode, I accidentally nuked it completely. Luckily, all of my code repos live on Github, and this seems a good as time as any to jump into static bloggin with Jekyll feet first!
-	<br/><br/>
-	The ArduPhone project is still going strong too! I am in the process of rewriting my singleton functions as classes in a library. That being so, there is lots of changes happening in the APKeypad and ArduPhone repos - be aware if you are hacking on them.
+	In no particular order, below are some of my ideas for things that
+	I would like to make (or might have even started already).<br/><br/>
+	<ul>
+	  <li>Arduino NRF24L01 Shields with configurable CS pin</li>
+	  <li>Control CrazyFlie Nano with a TI Chronos EZ430 watch</li>
+	  <li>Network graph view of ADN/Twitter connections</li>
+	  <li>Personal Activity Log to keep track of minute-by-minute
+	  activity</li>
+	  <li>Raspberry Pi/Arduino based home automation</li>
+	  <li>3D Printer</li>
+	  <li>CNC Mill</li>
+	  <li>Automatic irrigation system</li>
+	  <li>Per socket/circuit power usage monitoring</li>
+	</ul>
   </p>
 </body>
