--- a/index.html
+++ b/index.html
@@ -44,12 +44,17 @@
   </div>
   <br/>
   <ul>
+	<li>2013-12-03
+	  <a href="posts/switched_to_colemak.html">Switched to Colemak</a>
+	</li>
 	<li>2013-10-23
 	  <a href="posts/moving_on_to_new_projects.html">Moving On to New
 	  Projects</a>
+	</li>
 	<li>2013-10-21
 	  <a href="posts/emoji_support_in_emacs_jabber.html">Emoji
 	  Support in Jabber.el</a>
+	</li>
 	<li>2013-08-29
 	  <a href="posts/development_is_art.html">Development is Art</a>
 	</li>
