New Post: My XXX TLD
Signed-off-by: Zach Wick <zach@zachwick.com>

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
   </div>
   <br/>
   <ul>
+	<li>2013-12-04
+	  <a href="posts/my_xxx_tld.html">My .XXX TLD</a>
+	</li>
 	<li>2013-12-03
 	  <a href="posts/switched_to_colemak.html">Switched to Colemak</a>
 	</li>
