New Post: My Newest Dev Setup
Signed-off-by: Zach Wick <zwick@Argo.local>

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
   </div>
   <br/>
   <ul>
+	<li>2013-12-23
+	  <a href="posts/my_newest_dev_setup.html">My newest dev setup</a>
+	</li>
 	<li>2013-12-04
 	  <a href="posts/my_xxx_tld.html">My .XXX TLD</a>
 	</li>
