Updates to 'About', new key, and new tagline.
Signed-off-by: ZachWick <zach@zachwick.xxx>

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <meta name="google-site-verification" content="HcjfH34vMstP99AFsMBlgx54FxUGKq1LmICBg33b-mk" />
-  <title>ZachWick's Development Playground</title>
+  <title>Compute free or die: Death is not the worst of evils.</title>
   <style>
 	body {
 	  max-width: 800px;
@@ -35,7 +35,7 @@
   </style>
 </head>
 <body>
-  <h2>ZachWick's Development Playground</h2>
+  <h2>Compute free or die: Death is not the worst of evils.</h2>
   <div>
 	<span><a href="./index.html">Home</a></span>
 	<span><a href="pages/about.html">About</a></span>
