--- a/pages/about.html
+++ b/pages/about.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   <h2>About ZachWick</h2>
-  <h3>Last Updated: 2013-06-30</h3>
+  <h3>Last Updated: 2014-01-10</h3>
   <div>
 	<span><a href="../index.html">Home</a></span>
 	<span><a href="../pages/about.html">About</a></span>
@@ -55,14 +55,27 @@
 	  <li>ArduPhone - an Arduino based cell phone</li>
 	  <li>Copy.com - a cross-platform file sharing/syncing
 	  application</li>
+	  <li>plink - a python ncurses web browser</li>
 	</ul>
 	<br/>
 	<h3>Employment</h3>
 	<ul>
+	  <li> Roost Technology
+		<ul>
+		  <li>Co-Founder &amp; Lead Engineer</li>
+		  <li>2013-11 - Present</li>
+		</ul>
+	  </li>
+	  <li> IOSiX
+		<ul>
+		  <li>Embedded Systems Contractor</li>
+		  <li>2013-11 - Present</li>
+		</ul>
+	  </li>
 	  <li> Barracuda Networks
 		<ul>
 		  <li>Software Engineer</li>
-		  <li>2012-05 - Present</li>
+		  <li>2012-05 - 2013-11</li>
 		</ul>
 	  </li>
 	  <li> LectureTools LLC
