Added the new RSS feed link to the common header.
Signed-off-by: ZachWick <zach@zachwick.xxx>

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
   	  margin-left: 10px;
   	  font-weight: normal;
 	}
+	body > div > span {
+      border: 1px solid #000000;
+      border-radius: 2px 2px 2px 2px;
+      padding: 3px;
+	}
   </style>
 </head>
 <body>
