--- a/pages/project_list.html
+++ b/pages/project_list.html
@@ -41,6 +41,7 @@
 	<span><a href="../pages/about.html">About</a></span>
 	<span><a href="../pages/project_list.html">Project Ideas</a></span>
 	<span><a href="../pages/zachwick_key.asc">Key</a></span>
+	<span><a href="pages/rss_feed.xml">RSS Feed</a></span>
   </div>
   <p>
 	In no particular order, below are some of my ideas for things that
