New GPG key information.
Signed-off-by: ZachWick <zach@zachwick.xxx>

--- a/pages/key.html
+++ b/pages/key.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Just Picked a Whole Bouquet of Oopsie Daisies</title>
+  <title>ZachWick's GPG Key</title>
   <style>
 	body {
 	  max-width: 800px;
@@ -34,18 +34,22 @@
   </style>
 </head>
 <body>
-  <h2>Just Picked a Whole Bouquet of Oopsie Daisies</h2>
-  <h3>2012-06-19</h3>
+  <h2>ZachWick's GPG Key</h2>
+  <h3>Last Updated: 2014-03-23</h3>
   <div>
 	<span><a href="../index.html">Home</a></span>
 	<span><a href="../pages/about.html">About</a></span>
 	<span><a href="../pages/project_list.html">Project Ideas</a></span>
 	<span><a href="../pages/key.html">Key</a></span>
-	<span><a href="../pages/rss_feed.xml">RSS Feed</a></span>
+	<span><a href="pages/rss_feed.xml">RSS Feed</a></span>
   </div>
   <p>
-	As you can see, zachwick.com is experiencing some technical difficulties right now. In the process of trying to clean up my Linode, I accidentally nuked it completely. Luckily, all of my code repos live on Github, and this seems a good as time as any to jump into static bloggin with Jekyll feet first!
-	<br/><br/>
-	The ArduPhone project is still going strong too! I am in the process of rewriting my singleton functions as classes in a library. That being so, there is lots of changes happening in the APKeypad and ArduPhone repos - be aware if you are hacking on them.
+	<h4>Identities:</h4>
+	<ul>
+	  <li>zach@zachwick.com</li>
+	  <li>zach@zachwick.xxx</li>
+	</ul>
+	<h4>Fingerprint:</h4>
+	B53C F651 52B4 B23A 7B05  1458 076D 16AB CA89 EBC4
   </p>
 </body>
