New Post: LibrePlanet 2014
Signed-off-by: ZachWick <zach@zachwick.xxx>

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
   </div>
   <br/>
   <ul>
+	<li>2014-03-23
+	  <a href="posts/libreplanet_2014.html">LibrePlanet 2014</a>
+	</li>
 	<li>2013-12-23
 	  <a href="posts/my_newest_dev_setup.html">My newest dev setup</a>
 	</li>
