Add App.net verification link and update employment status.
Signed-off-by: ZachtWick <zach@zachwick.com>

--- a/index.html
+++ b/index.html
@@ -135,4 +135,5 @@
 	  Picked a Whole Bouqet of Oopsie Daisies</a>
 	</li>
   </ul>
+  <a href='https://alpha.app.net/zachwick' rel='me' style="display:none;"></a>
 </body>
