--- a/pages/about.html
+++ b/pages/about.html
@@ -61,6 +61,12 @@
 	<br/>
 	<h3>Employment</h3>
 	<ul>
+	  <li> AMF-Nano
+		<ul>
+		  <li>Firmware Engineer</li>
+		  <li>2014-03 - Present</l>
+		</ul>
+	  </li>
 	  <li> Roost Technology
 		<ul>
 		  <li>Co-Founder &amp; Lead Engineer</li>
@@ -70,7 +76,7 @@
 	  <li> IOSiX
 		<ul>
 		  <li>Embedded Systems Contractor</li>
-		  <li>2013-11 - Present</li>
+		  <li>2013-11 - 2014-03</li>
 		</ul>
 	  </li>
 	  <li> Barracuda Networks
