Adds a privacy policy with Piwik opt-out
Signed-off-by: ZachWick <zach@zachwick.com>

--- a/pages/about.html
+++ b/pages/about.html
@@ -56,7 +56,8 @@
 	<span><a href="../pages/about.html">About</a></span>
 	<span><a href="../pages/project_list.html">Project Ideas</a></span>
 	<span><a href="../pages/key.html">Key</a></span>
-	<span><a href="pages/rss_feed.xml">RSS Feed</a></span>
+	<span><a href="../pages/rss_feed.xml">RSS Feed</a></span>
+	<span><a href="../pages/privacy.html">Privacy</a></span>
   </div>
   <p>
 	A Developer and avid outdoorsman. Also a technophile who is prone to bouts
