--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -1,5 +1,5 @@
 <head>
-  <title>A Day Using Only FOSS</title>
+  <title>Privacy While on zachwick.[com|xxx]</title>
   <style>
 	body {
 	  max-width: 800px;
@@ -49,8 +49,8 @@
 <noscript><p><img src="http://zachwick.com/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
 <!-- End Piwik Code -->
 <body>
-  <h2>PyOhio 2013</h2>
-  <h3>2013-08-05</h3>
+  <h2>Privacy While on zachwick.[com|xxx]</h2>
+  <h3>Last Updated: 2014-05-13</h3>
   <div>
 	<span><a href="../index.html">Home</a></span>
 	<span><a href="../pages/about.html">About</a></span>
@@ -60,28 +60,20 @@
 	<span><a href="../pages/privacy.html">Privacy</a></span>
   </div>
   <p>
-	Two weeks ago I attended PyOhio 2013 - It was freaking awesome! I
-	had high hopes for PyOhio as the last conference that I attended
-	was LibrePlanet (which was also fantastic), and PyOhio did not
-	fail to deliver.<br/><br/>
-	In addition to listening to some really cool talks, I got to give
-	a (hopefully cool) talk on what I work on all day - Copy.com. The
-	talks that were presented were on a wide array of Python-centric
-	topics and ranged from "novice" to "expert" in subject
-	matter.<br/><br/>
-	The people at PyOhio were just as interesting as the talks. I met
-	one guy from LightSide, who is doing text analysis on student's
-	papers. I met another guy who is a developer on Firefox for
-	Android and picked his brain on porting GNU Icecat to
-	Android. There was another guy that I met who works for Canonical
-	on one of their webapps - It was great to trade "war stories" and
-	talk shop.<br/><br/>
-	My talk on a Python FUSE layer for Copy.com went rather well, and
-	for interested people, there is a video posted
-	at <a href="http://pyvideo.org/video/2271/python-fuse">PyVideo</a>
-	and <a href="https://www.youtube.com/watch?v=DpvdOuTzOU0">YouTube</a>.
+	This set of pages uses Piwik to provide analytics to me,
+	zachwick.<br/>
+	Piwik is configured to <br/>
+	<ul>
+	  <li>Respect your browser's "Do Not Track" setting</li>
+	  <li>Anonymize your IP by masking out the last two octets
+		(192.168.xxx.xxx)</li>
+	  <li>Provide an opt-out if you do not wish to change your "Do Not
+		Track" settings globally</li>
+	</ul>
+	If you feel that this is not enough, email me with your
+	feedback.
 	<br/><br/>
-	I will definitely be going to PyOhio 2014, and will even try to
-	come up with an exciting Python project to talk about.
+	<iframe style="border: 0; height: 200px; width: 600px;"
+	src="https://zachwick.com/piwik/index.php?module=CoreAdminHome&action=optOut&language=en"></iframe>
   </p>
 </body>
