--- a/pages/project_list.html
+++ b/pages/project_list.html
@@ -56,7 +56,8 @@
 	<span><a href="../pages/about.html">About</a></span>
 	<span><a href="../pages/project_list.html">Project Ideas</a></span>
 	<span><a href="../pages/key.html">Key</a></span>
-	<span><a href="pages/rss_feed.xml">RSS Feed</a></span>
+	<span><a href="../pages/rss_feed.xml">RSS Feed</a></span>
+	<span><a href="../pages/privacy.html">Privacy</a></span>
   </div>
   <p>
 	In no particular order, below are some of my ideas for things that
