New Post: HTML and EME
Signed-off-by: ZachWick <zach@zachwick.com>

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
   </div>
   <br/>
   <ul>
+	<li>2014-05-18
+	  <a href="posts/html_and_eme.html">HTML and EME</a>
+	</li>
 	<li>2014-03-23
 	  <a href="posts/libreplanet_2014.html">LibrePlanet 2014</a>
 	</li>
