Places public key as file and updates key identities
Signed-off-by: ZachWick <zach@zachwick.com>

--- a/pages/key.html
+++ b/pages/key.html
@@ -64,7 +64,9 @@
 	<ul>
 	  <li>zach@zachwick.com</li>
 	  <li>zach@zachwick.xxx</li>
+	  <li>zwick@amfnano.com</li>
 	</ul>
+	<a href="../files/zachwick_pub.asc">zachwick_pub.asc</a>
 	<h4>Fingerprint:</h4>
 	B53C F651 52B4 B23A 7B05  1458 076D 16AB CA89 EBC4
   </p>
