New Post: Using the Firefox OS Flame
Signed-off-by: zachwick <zach@zachwick.com>

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
   </div>
   <br/>
   <ul>
+	<li>2014-10-03
+	  <a href="posts/using_the_firefox_os_flame.html">Using the
+	  FirefoxOS Flame</a>
+	</li>
 	<li>2014-05-18
 	  <a href="posts/html_and_eme.html">HTML and EME</a>
 	</li>
