Working on moving to straight txt files
Signed-off-by: zachwick <zach@zachwick.com>

--- a/index.html
+++ b/index.html
@@ -67,94 +67,94 @@
   <br/>
   <ul>
 	<li>2014-10-03
-	  <a href="posts/using_the_firefox_os_flame.html">Using the
+	  <a href="posts/using_the_firefox_os_flame.txt">Using the
 	  FirefoxOS Flame</a>
 	</li>
 	<li>2014-05-18
-	  <a href="posts/html_and_eme.html">HTML and EME</a>
+	  <a href="posts/html_and_eme.txt">HTML and EME</a>
 	</li>
 	<li>2014-03-23
-	  <a href="posts/libreplanet_2014.html">LibrePlanet 2014</a>
+	  <a href="posts/libreplanet_2014.txt">LibrePlanet 2014</a>
 	</li>
 	<li>2013-12-23
-	  <a href="posts/my_newest_dev_setup.html">My newest dev setup</a>
+	  <a href="posts/my_newest_dev_setup.txt">My newest dev setup</a>
 	</li>
 	<li>2013-12-04
-	  <a href="posts/my_xxx_tld.html">My .XXX TLD</a>
+	  <a href="posts/my_xxx_tld.txt">My .XXX TLD</a>
 	</li>
 	<li>2013-12-03
-	  <a href="posts/switched_to_colemak.html">Switched to Colemak</a>
+	  <a href="posts/switched_to_colemak.txt">Switched to Colemak</a>
 	</li>
 	<li>2013-10-23
-	  <a href="posts/moving_on_to_new_projects.html">Moving On to New
+	  <a href="posts/moving_on_to_new_projects.txt">Moving On to New
 	  Projects</a>
 	</li>
 	<li>2013-10-21
-	  <a href="posts/emoji_support_in_emacs_jabber.html">Emoji
+	  <a href="posts/emoji_support_in_emacs_jabber.txt">Emoji
 	  Support in Jabber.el</a>
 	</li>
 	<li>2013-08-29
-	  <a href="posts/development_is_art.html">Development is Art</a>
+	  <a href="posts/development_is_art.txt">Development is Art</a>
 	</li>
 	<li>2013-08-09
-	  <a href="posts/my_dream_workplace_culture.html">My Dream
+	  <a href="posts/my_dream_workplace_culture.txt">My Dream
 	  Workplace Culture</a>
 	</li>
 	<li>2013-08-05
-	  <a href="posts/pyohio_2013.html">PyOhio 2013</a>
+	  <a href="posts/pyohio_2013.txt">PyOhio 2013</a>
 	</li>
 	<li>2013-05-02
-	  <a href="posts/google_glass_seems_awesome_but.html">Google Glass
+	  <a href="posts/google_glass_seems_awesome_but.txt">Google Glass
 	  Seems Awesome, But...</a>
 	</li>
 	<li>2013-04-23
-	  <a href="posts/how_to_install_gnu_icecat_on_debian_wheezy.html">How
+	  <a href="posts/how_to_install_gnu_icecat_on_debian_wheezy.txt">How
 	  to Install GNU Icecat on Debian Wheezy</a>
 	</li>
 	<li>2013-04-09 
-	  <a href="posts/libreplanet_2013.html">LibrePlanet 2013</a>
+	  <a href="posts/libreplanet_2013.txt">LibrePlanet 2013</a>
 	</li>
 	<li>2013-02-06
-	  <a href="posts/developers_and_foss.html">Developers and
+	  <a href="posts/developers_and_foss.txt">Developers and
 	  FOSS</a>
 	</li>
 	<li>2012-12-04
-	  <a href="posts/owning_devices.html">Owning Devices</a>
+	  <a href="posts/owning_devices.txt">Owning Devices</a>
 	</li>
 	<li>2012-11-14
-	  <a href="posts/the_evolution_of_my_dev_setup.html">The
+	  <a href="posts/the_evolution_of_my_dev_setup.txt">The
 	  Evolution of my Dev Setup</a>
 	</li>
 	<li>2012-09-23
-	  <a href="posts/an_update_on_a_day_using_only_foss.html">An
+	  <a href="posts/an_update_on_a_day_using_only_foss.txt">An
 	  Update on 'A Day Using Only FOSS'</a>
 	</li>
 	<li>2012-09-20
-	  <a href="posts/ann_arbor_give_camp_2012.html">Ann Arbor Give
+	  <a href="posts/ann_arbor_give_camp_2012.txt">Ann Arbor Give
 	  Camp 2012</a>
 	</li>
 	<li>2012-08-29
-	  <a href="posts/a_day_using_only_foss.html">A Day Using Only
+	  <a href="posts/a_day_using_only_foss.txt">A Day Using Only
 	  FOSS</a>
 	</li>
 	<li>2012-07-30
-	  <a href="posts/i_hope_to_someday_own_a_monopoly.html">I Hope to
+	  <a href="posts/i_hope_to_someday_own_a_monopoly.txt">I Hope to
 	  Someday Own a Monopoly</a>
 	</li>
 	<li>2012-07-12
-	  <a href="posts/why_dont_shipping_companies_have_better_delivery_estimates.html">Why
+	  <a href="posts/why_dont_shipping_companies_have_better_delivery_estimates.txt">Why
 	  Don't Shipping Companies Have Better Delivery Estimates</a>
 	</li>
 	<li>2012-07-12
-	  <a href="posts/using_gnu_linux_==_assembling_your_own_ammunition.html">Using
+	  <a href="posts/using_gnu_linux_==_assembling_your_own_ammunition.txt">Using
 	  GNU/Linux == Assembling Your Own Ammunition</a>
 	</li>
 	<li>2012-06-27
-	  <a href="posts/what_is_this_sublime_text_2_hullaballo.html">What
+	  <a href="posts/what_is_this_sublime_text_2_hullaballo.txt">What
 	  is This 'Sublime Text 2' Hullaballo?</a>
 	</li>
 	<li>2012-06-19
-	  <a href="posts/just_picked_a_whole_bouquet_of_oopsie_daisies.html">Just
+	  <a href="posts/just_picked_a_whole_bouquet_of_oopsie_daisies.txt">Just
 	  Picked a Whole Bouqet of Oopsie Daisies</a>
 	</li>
   </ul>
