Updates 'About' and 'Project Idea' pages
Signed-off-by: zachwick <zach@zachwick.com>

--- a/pages/about.html
+++ b/pages/about.html
@@ -50,7 +50,7 @@
 <!-- End Piwik Code -->
 <body>
   <h2>About ZachWick</h2>
-  <h3>Last Updated: 2014-01-10</h3>
+  <h3>Last Updated: 2015-02-20</h3>
   <div>
 	<span><a href="../index.html">Home</a></span>
 	<span><a href="../pages/about.html">About</a></span>
@@ -77,10 +77,18 @@
 	<br/>
 	<h3>Employment</h3>
 	<ul>
+	  <li> Bareo
+		<ul>
+		  <li>Co-Founder</li>
+		  <li>2014-10 - Present</li>
+		  <li><a href="https://bareo.io/">Bareo Website</a></li>
+		</ul>
+	  </li>
 	  <li> AMF-Nano
 		<ul>
-		  <li>Firmware Engineer</li>
-		  <li>2014-03 - Present</l>
+		  <li>Firmware Engineer Contractor</li>
+		  <li>2014-03 - 2014-10</li>
+		  <li><a href="http://amfnano.com/">AMF-Nano Website</a></li>
 		</ul>
 	  </li>
 	  <li> Roost Technology
@@ -93,18 +101,21 @@
 		<ul>
 		  <li>Embedded Systems Contractor</li>
 		  <li>2013-11 - 2014-03</li>
+		  <li><a href="http://iosix.com/">IOSiX Website</a></li>
 		</ul>
 	  </li>
 	  <li> Barracuda Networks
 		<ul>
 		  <li>Software Engineer</li>
 		  <li>2012-05 - 2013-11</li>
+		  <li><a href="https://barracuda.com/">Barracuda Website</a></li>
 		</ul>
 	  </li>
 	  <li> LectureTools LLC
 		<ul>
 		  <li>Software Engineer &amp; Front-End Evangelist</li>
 		  <li>2011-01 - 2012-05</li>
+		  <li><a href="http://lecturetools.com/">LectureTools Website</a></li>
 		</ul>
 	  </li>
 	  <li> Su Cara LLC
