--- a/pages/project_list.html
+++ b/pages/project_list.html
@@ -50,7 +50,7 @@
 <!-- End Piwik Code -->
 <body>
   <h2>About ZachWick</h2>
-  <h3>Last Updated: 2013-06-30</h3>
+  <h3>Last Updated: 2015-02-20</h3>
   <div>
 	<span><a href="../index.html">Home</a></span>
 	<span><a href="../pages/about.html">About</a></span>
@@ -73,6 +73,9 @@
 	  <li>CNC Mill</li>
 	  <li>Automatic irrigation system</li>
 	  <li>Per socket/circuit power usage monitoring</li>
+	  <li>JavaScript engine</li>
+	  <li>Custom Dromida Kodo controller</li>
+	  <li>Linux From Scratch development machine image</li>
 	</ul>
   </p>
 </body>
