--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,5 @@
 <head>
-  <title>About ZachWick</title>
+  <title>About zachwick</title>
   <style>
 	body {
 	  max-width: 800px;
@@ -49,7 +49,7 @@
 <noscript><p><img src="http://zachwick.com/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
 <!-- End Piwik Code -->
 <body>
-  <h2>About ZachWick</h2>
+  <h2>About zachwick</h2>
   <h3>Last Updated: 2015-02-20</h3>
   <div>
 	<span><a href="../index.html">Home</a></span>
@@ -65,7 +65,7 @@
 	software. Generally paranoid about Big Brother watching.
 	<br/>
 	<h3>Projects</h3>
-	A full list can be found on <a href="https://github.com/ZachWick/">Github</a>
+	A full list can be found on <a href="https://github.com/zachwick/">Github</a>
 	<br/><br/>
 	<ul>
 	  <li>wmm - a lightweight window manager for X11</li>
