--- a/pages/key.html
+++ b/pages/key.html
@@ -1,5 +1,5 @@
 <head>
-  <title>ZachWick's GPG Key</title>
+  <title>zachwick's GPG Key</title>
   <style>
 	body {
 	  max-width: 800px;
@@ -49,7 +49,7 @@
 <noscript><p><img src="http://zachwick.com/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
 <!-- End Piwik Code -->
 <body>
-  <h2>ZachWick's GPG Key</h2>
+  <h2>zachwick's GPG Key</h2>
   <h3>Last Updated: 2014-03-23</h3>
   <div>
 	<span><a href="../index.html">Home</a></span>
