--- a/pages/project_list.html
+++ b/pages/project_list.html
@@ -49,7 +49,7 @@
 <noscript><p><img src="http://zachwick.com/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
 <!-- End Piwik Code -->
 <body>
-  <h2>About ZachWick</h2>
+  <h2>About zachwick</h2>
   <h3>Last Updated: 2015-02-20</h3>
   <div>
 	<span><a href="../index.html">Home</a></span>
