Moves about.html to about.txt
Signed-off-by: zachwick <zach@zachwick.com>

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,158 +1,1 @@
-<head>
-  <title>About zachwick</title>
-  <style>
-	body {
-	  max-width: 800px;
-  	  margin: 50px auto;
-  	  font-family: sans-serif;
-  	  line-height: 1.5;
-	}
-	a {
- 	  text-decoration: none; 
-	}
-	a:hover {
- 	  text-decoration: underline; 
-	}
-	body > h2 {
-	  text-align: center;
-	}
-	body > div {
-	  margin: 0;
-  	  text-align: center;
-	}
-	body > ul > li {
-  	  display: block;
-  	  margin: 0;
-  	  list-style-type: none;
-  	  text-align: left;
-  	  font-weight: bold;
-	}
-	body > ul > li a {
-  	  margin-left: 10px;
-  	  font-weight: normal;
-	}
-  </style>
-</head>
-<!-- Piwik -->
-<script type="text/javascript">
-  var _paq = _paq || [];
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u=(("https:" == document.location.protocol) ? "https" : "http") + "://zachwick.com/piwik/";
-    _paq.push(['setTrackerUrl', u+'piwik.php']);
-    _paq.push(['setSiteId', 1]);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript';
-    g.defer=true; g.async=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script>
-<noscript><p><img src="http://zachwick.com/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
-<!-- End Piwik Code -->
-<body>
-  <h2>About zachwick</h2>
-  <h3>Last Updated: 2015-02-20</h3>
-  <div>
-	<span><a href="../index.html">Home</a></span>
-	<span><a href="../pages/about.html">About</a></span>
-	<span><a href="../pages/project_list.html">Project Ideas</a></span>
-	<span><a href="../pages/key.html">Key</a></span>
-	<span><a href="../pages/rss_feed.xml">RSS Feed</a></span>
-	<span><a href="../pages/privacy.html">Privacy</a></span>
-  </div>
-  <p>
-	A Developer and avid outdoorsman. Also a technophile who is prone to bouts
-	of Luddite-ness. A developer and believer in free (as in freedom)
-	software. Generally paranoid about Big Brother watching.
-	<br/>
-	<h3>Projects</h3>
-	A full list can be found on <a href="https://github.com/zachwick/">Github</a>
-	<br/><br/>
-	<ul>
-	  <li>wmm - a lightweight window manager for X11</li>
-	  <li>ArduPhone - an Arduino based cell phone</li>
-	  <li>Copy.com - a cross-platform file sharing/syncing
-	  application</li>
-	  <li>plink - a python ncurses web browser</li>
-	</ul>
-	<br/>
-	<h3>Employment</h3>
-	<ul>
-	  <li> Bareo
-		<ul>
-		  <li>Co-Founder</li>
-		  <li>2014-10 - Present</li>
-		  <li><a href="https://bareo.io/">Bareo Website</a></li>
-		</ul>
-	  </li>
-	  <li> AMF-Nano
-		<ul>
-		  <li>Firmware Engineer Contractor</li>
-		  <li>2014-03 - 2014-10</li>
-		  <li><a href="http://amfnano.com/">AMF-Nano Website</a></li>
-		</ul>
-	  </li>
-	  <li> Roost Technology
-		<ul>
-		  <li>Co-Founder &amp; Lead Engineer</li>
-		  <li>2013-11 - Present</li>
-		</ul>
-	  </li>
-	  <li> IOSiX
-		<ul>
-		  <li>Embedded Systems Contractor</li>
-		  <li>2013-11 - 2014-03</li>
-		  <li><a href="http://iosix.com/">IOSiX Website</a></li>
-		</ul>
-	  </li>
-	  <li> Barracuda Networks
-		<ul>
-		  <li>Software Engineer</li>
-		  <li>2012-05 - 2013-11</li>
-		  <li><a href="https://barracuda.com/">Barracuda Website</a></li>
-		</ul>
-	  </li>
-	  <li> LectureTools LLC
-		<ul>
-		  <li>Software Engineer &amp; Front-End Evangelist</li>
-		  <li>2011-01 - 2012-05</li>
-		  <li><a href="http://lecturetools.com/">LectureTools Website</a></li>
-		</ul>
-	  </li>
-	  <li> Su Cara LLC
-		<ul>
-		  <li>Co-Founder &amp; CTO</li>
-		  <li>2010-12 - 2011-12</li>
-		</ul>
-	  </li>
-	  <li> Mobile Sign Language Systems
-		<ul>
-		  <li>App Developer</li>
-		  <li>2010-08 - 2011-02</li>
-		</ul>
-	  </li>
-	  <li> Saagara LLC
-		<ul>
-		  <li>iOS Developer</li>
-		  <li>2010-08 - 2011-01</li>
-		</ul>
-	  </li>
-	</ul>
-	<br/>
-	<h3>Education</h3>
-	<ul>
-	  <li> University of Toledo
-		<ul>
-		  <li>BS in Mathematics (Concentration in Pure
-		  Mathematics)</li>
-		  <li>2008 - 2010</li>
-		</ul>
-	  </li>
-	  <li> Bowling Green State University
-		<ul>
-		  <li>Post-Secondary Enrollment Student</li>
-		  <li>2006 - 2008</li>
-		</ul>
-	  </li>
-	</ul>
-  </p>
-</body>
+./about.txt
