More html -> txt fixes
Signed-off-by: zachwick <zach@zachwick.com>

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <br/>
   <ul>
 	<li>2014-11-06
-	  <a href="posts/using_Colemak_on_the_firefox_os_flame.html">Using
+	  <a href="posts/using_Colemak_on_the_firefox_os_flame.txt">Using
 		Colemak on the FirefoxOS Flame</a>
 	</li>
 	<li>2014-10-03
