Moves Project Idea list to .txt
Signed-off-by: zachwick <zach@zachwick.com>

--- a/pages/project_list.html
+++ b/pages/project_list.html
@@ -1,81 +1,1 @@
-<head>
-  <title>Project Ideas</title>
-  <style>
-	body {
-	  max-width: 800px;
-  	  margin: 50px auto;
-  	  font-family: sans-serif;
-  	  line-height: 1.5;
-	}
-	a {
- 	  text-decoration: none; 
-	}
-	a:hover {
- 	  text-decoration: underline; 
-	}
-	body > h2 {
-	  text-align: center;
-	}
-	body > div {
-	  margin: 0;
-  	  text-align: center;
-	}
-	body > ul > li {
-  	  display: block;
-  	  margin: 0;
-  	  list-style-type: none;
-  	  text-align: left;
-  	  font-weight: bold;
-	}
-	body > ul > li a {
-  	  margin-left: 10px;
-  	  font-weight: normal;
-	}
-  </style>
-</head>
-<!-- Piwik -->
-<script type="text/javascript">
-  var _paq = _paq || [];
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u=(("https:" == document.location.protocol) ? "https" : "http") + "://zachwick.com/piwik/";
-    _paq.push(['setTrackerUrl', u+'piwik.php']);
-    _paq.push(['setSiteId', 1]);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript';
-    g.defer=true; g.async=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script>
-<noscript><p><img src="http://zachwick.com/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
-<!-- End Piwik Code -->
-<body>
-  <h2>About zachwick</h2>
-  <h3>Last Updated: 2015-02-20</h3>
-  <div>
-	<span><a href="../index.html">Home</a></span>
-	<span><a href="../pages/about.html">About</a></span>
-	<span><a href="../pages/project_list.html">Project Ideas</a></span>
-	<span><a href="../pages/key.html">Key</a></span>
-	<span><a href="../pages/rss_feed.xml">RSS Feed</a></span>
-	<span><a href="../pages/privacy.html">Privacy</a></span>
-  </div>
-  <p>
-	In no particular order, below are some of my ideas for things that
-	I would like to make (or might have even started already).<br/><br/>
-	<ul>
-	  <li>Arduino NRF24L01 Shields with configurable CS pin</li>
-	  <li>Control CrazyFlie Nano with a TI Chronos EZ430 watch</li>
-	  <li>Network graph view of ADN/Twitter connections</li>
-	  <li>Personal Activity Log to keep track of minute-by-minute
-	  activity</li>
-	  <li>Raspberry Pi/Arduino based home automation</li>
-	  <li>3D Printer</li>
-	  <li>CNC Mill</li>
-	  <li>Automatic irrigation system</li>
-	  <li>Per socket/circuit power usage monitoring</li>
-	  <li>JavaScript engine</li>
-	  <li>Custom Dromida Kodo controller</li>
-	  <li>Linux From Scratch development machine image</li>
-	</ul>
-  </p>
-</body>
+./project_list.txt
