--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   <h2>Compute free or die: Death is not the worst of evils.</h2>
   <div>
 	<span><a href="./index.html">Home</a></span>
-	<span><a href="pages/about.html">About</a></span>
-	<span><a href="pages/project_list.html">Project Ideas</a></span>
+	<span><a href="pages/about.txt">About</a></span>
+	<span><a href="pages/project_list.txt">Project Ideas</a></span>
 	<span><a href="pages/key.html">Key</a></span>
 	<span><a href="pages/rss_feed.xml">RSS Feed</a></span>
 	<span><a href="pages/privacy.html">Privacy</a></span>
