--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -53,8 +53,8 @@
   <h3>Last Updated: 2014-05-13</h3>
   <div>
 	<span><a href="../index.html">Home</a></span>
-	<span><a href="../pages/about.html">About</a></span>
-	<span><a href="../pages/project_list.html">Project Ideas</a></span>
+	<span><a href="../pages/about.txt">About</a></span>
+	<span><a href="../pages/project_list.txt">Project Ideas</a></span>
 	<span><a href="../pages/key.html">Key</a></span>
 	<span><a href="../pages/rss_feed.xml">RSS Feed</a></span>
 	<span><a href="../pages/privacy.html">Privacy</a></span>
