Adds 'Death of The Hacker' post
Signed-off-by: zachwick <zach@zachwick.com>

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
   </div>
   <br/>
   <ul>
+	<li>2014-03-24
+	  <a href="posts/death_of_the_hacker.txt">Death of The Hacker</a>
+	</li>
 	<li>2014-11-06
 	  <a href="posts/using_Colemak_on_the_firefox_os_flame.txt">Using
 		Colemak on the FirefoxOS Flame</a>
